trying to fix why checkboxes are invisible in chrome

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -7,6 +7,11 @@
 //   flex: 1;
 // }
 
+input[type=checkbox]
+{
+  height: 12px;
+}
+
 
 
 // Specific CSS for your home-page
